# pets_entera

./: .gitignore  README.md
infra/: docker-compose.yaml
pets_site/: .env.example_django  Dockerfile  pyproject.toml
pets_site/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
pets_site/data/: types.csv
pets_site/pet/: admin.py  models.py
pets_site/pet/management/commands/: add_types.py
pets_site/pet/migrations/: 0001_initial.py  0002_initial.py  0003_alter_pet_owner.py
pets_site/pets_site/: asgi.py  settings.py  wsgi.py
pets_site/user/: admin.py  models.py
pets_site/user/migrations/: 0001_initial.py
